Improved ignore file to ignore the build artifacts of the assembly_kit. Added some more information to the README. Improve build script to state what it did

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 *.log
 working
+assembly_kit/raw_data/EmpireDesignData
+assembly_kit/working_data/db
+assembly_kit/working_data/text
+assembly_kit/binaries/BOB
