Updated from the latest template

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.log
 working
-assembly_kit/raw_data/EmpireDesignData
-assembly_kit/working_data/db
-assembly_kit/working_data/text
-assembly_kit/binaries/BOB
+src/assembly_kit/raw_data/EmpireDesignData
+src/assembly_kit/working_data/db
+src/assembly_kit/working_data/text
+src/assembly_kit/binaries/BOB
+src/assembly_kit/retail
